--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=SERVICE-REGISTRY
+server.port=8761
 
+# Each Eureka server is also a eureka client we can disable this client-side behaviour
+# with these properties
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
