--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8081
+
+spring.application.name=EMPLOYEE-SERVICE
+
+# Register with Eureka Server
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
