--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,3 +3,17 @@ server.port=9191
 
 # Register with Eureka Server
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+management.endpoints.web.exposure.include=*
+
+#Routes for Employee Service
+spring.cloud.gateway.routes[0].id=EMPLOYEE-SERVICE
+spring.cloud.gateway.routes[0].uri=lb://EMPLOYEE-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
+# API gateway will route http://localhost:9191/api/employees to
+#                        http://localhost:8081/api/employees
+
+#Routes for Department Service
+spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
+spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
