--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -6,21 +6,21 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 management.endpoints.web.exposure.include=*
 
-#For automatically setting up routes we need discovery
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
-#See DEBUG logs for mapping
-logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
+##For automatically setting up routes we need discovery
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+##See DEBUG logs for mapping
+#logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
 
-##Routes for Employee Service
-#spring.cloud.gateway.routes[0].id=EMPLOYEE-SERVICE
-#spring.cloud.gateway.routes[0].uri=lb://EMPLOYEE-SERVICE
-#spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
-## API gateway will route http://localhost:9191/api/employees to
-##                        http://localhost:8081/api/employees
-#
-##Routes for Department Service
-#spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
-#spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
-#spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
+#Routes for Employee Service
+spring.cloud.gateway.routes[0].id=EMPLOYEE-SERVICE
+spring.cloud.gateway.routes[0].uri=lb://EMPLOYEE-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/employees/**
+# API gateway will route http://localhost:9191/api/employees to
+#                        http://localhost:8081/api/employees
+
+#Routes for Department Service
+spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
+spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
 
