--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.application.name=CONFIG-SERVER
+server.port=8888
+# Register with Eureka Server
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
