--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=CONFIG-SERVER
 server.port=8888
 # Register with Eureka Server
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.cloud.config.server.git.uri=https://github.com/amanirshad/config-server-repo
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=master
