--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -5,4 +5,4 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.cloud.config.server.git.uri=https://github.com/amanirshad/config-server-repo
 spring.cloud.config.server.git.clone-on-start=true
-spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.default-label=main
