--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://localhost:3306/department_db
+#spring.datasource.username=root
+#spring.datasource.password=password
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.application.name=DEPARTMENT-SERVICE
+#
+## Register with Eureka Server
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
 
 spring.application.name=DEPARTMENT-SERVICE
-
-# Register with Eureka Server
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.config.import=optional:configserver:http://localhost:8888
