--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
-spring.datasource.username=root
-spring.datasource.password=password
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-server.port=8081
+#spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+#spring.datasource.username=root
+#spring.datasource.password=password
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#
+#server.port=8081
+#
+#spring.application.name=EMPLOYEE-SERVICE
+#
+## Register with Eureka Server
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.application.name=EMPLOYEE-SERVICE
-
-# Register with Eureka Server
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.config.import=optional:configserver:http://localhost:8888
