--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -12,5 +12,11 @@
 ## Register with Eureka Server
 #eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 spring.application.name=EMPLOYEE-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
