Distributed Tracing using Micrometer Zipkin

--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.rabbitmq.password=guest
 spring.application.name=DEPARTMENT-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 management.endpoints.web.exposure.include=*
+
+management.tracing.sampling.probability=1.0
