--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.rabbitmq.password=guest
 
 spring.application.name=EMPLOYEE-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
+
+management.tracing.sampling.probability=1.0
