--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.cloud.gateway.routes[1].id=DEPARTMENT-SERVICE
 spring.cloud.gateway.routes[1].uri=lb://DEPARTMENT-SERVICE
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
 
+management.tracing.sampling.probability=1.0
+
