--- a/organization-service/src/main/resources/application.properties
+++ b/organization-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ server.port=8083
 
 
 spring.application.name=ORGANIZATION-SERVICE
+
+# Register with Eureka Server
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
