Configure Spring Cloud Bus and Routes for Organization Service in API-Gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/departments/**
 
 management.tracing.sampling.probability=1.0
 
+#Routes for Organization Service
+spring.cloud.gateway.routes[2].id=ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].uri=lb://ORGANIZATION-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/organizations/**
+
