--- a/organization-service/src/main/resources/application.properties
+++ b/organization-service/src/main/resources/application.properties
@@ -13,5 +13,12 @@
 ## Register with Eureka Server
 #eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 spring.application.name=ORGANIZATION-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
+
+management.endpoints.web.exposure.include=*
