Implement Distributed Tracing in Organization-Service

--- a/organization-service/src/main/resources/application.properties
+++ b/organization-service/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.application.name=ORGANIZATION-SERVICE
 spring.config.import=optional:configserver:http://localhost:8888
 
 management.endpoints.web.exposure.include=*
+
+management.tracing.sampling.probability=1.0
